# hello-fastapi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
src/auth/: routers.py  security.py
tests/: test_main.py
tests/auth/: fake_data.py  test_routers.py  test_security.py
