[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = 'hello-fastapi'
version = '0.1.0'
readme = 'README.md'

requires-python = '>=3.12'

dependencies = [
    'fastapi == 0.115.6',
    'httpx == 0.28.0',
    'pytest == 8.3.4',
    'pyjwt == 2.10.1',
    'passlib == 1.7.4',
    'bcrypt == 4.2.1',
]